syntax = "proto3";

option csharp_namespace = "MiscCenter.GrpcServer";

package Scene;

// The greeting service definition.
service SceneApp {
  rpc GetSceneById (SceneRequest) returns (SceneResult) {}
  rpc GetSceneByIds (SceneList) returns (SceneResult) {}
  rpc GetSceneByName(SceneRequest) returns (SceneResult) {}
  rpc GetSceneAll (SceneAll) returns (SceneResult) {}
  rpc GetSceneByKeyWord (SceneSearch) returns (SceneResult) {}
  rpc AddScene (SceneModel) returns (SceneResult) {}
}
message SceneRequest {
  int32 Id=1;
  string Name=2;
}
// The request message containing the user's name.
message SceneList {
  repeated int32 Ids=1;
}
message SceneResult{
	int32 total = 1;
    repeated SceneModel data = 2;
}
message SceneAll {
}
message SceneSearch {
 string KeyWord=1;
 int32 From=2;
 int32 Size=3;
}

// The response message containing the greetings.
message SceneModel {
  int32 ID=1;
  string Name = 2;
  string CreateTime=3;
  string UpdateTime=4;
  string UserName=5;
  int32 CreatorID=6;
  int32 EditorID=7;
}
